--- a/FacialRecognitionDemonstration.ipynb
+++ b/FacialRecognitionDemonstration.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMgPqltvnFDFZ3aoL5NLOV1",
+      "authorship_tag": "ABX9TyO4nFLhqLE7iU7MMKM3X0CP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -290,7 +290,7 @@
     {
       "cell_type": "code",
       "source": [
-        "attack_image = attack.targeted_attack(model, crop_image, target_name, steps=30)"
+        "attack_image = attack.targeted_attack(model, crop_image, target_name)"
       ],
       "metadata": {
         "id": "sfLo5RUNnjC7"
