--- a/FacialRecognitionDemonstration.ipynb
+++ b/FacialRecognitionDemonstration.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4nFLhqLE7iU7MMKM3X0CP",
+      "authorship_tag": "ABX9TyO0jPw3HV74gQzwFiin6Kyx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,10 +63,32 @@
         "!bunzip2 \"shape_predictor_68_face_landmarks.dat.bz2\""
       ],
       "metadata": {
-        "id": "CLjA51nsVFiG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CLjA51nsVFiG",
+        "outputId": "2af70ef7-9f51-452e-c93c-acbdee3f48c5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2024-07-03 08:23:53--  http://dlib.net/files/shape_predictor_68_face_landmarks.dat.bz2\n",
+            "Resolving dlib.net (dlib.net)... 107.180.26.78\n",
+            "Connecting to dlib.net (dlib.net)|107.180.26.78|:80... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 64040097 (61M)\n",
+            "Saving to: ‘shape_predictor_68_face_landmarks.dat.bz2’\n",
+            "\n",
+            "shape_predictor_68_ 100%[===================>]  61.07M  20.4MB/s    in 3.0s    \n",
+            "\n",
+            "2024-07-03 08:23:57 (20.4 MB/s) - ‘shape_predictor_68_face_landmarks.dat.bz2’ saved [64040097/64040097]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -93,7 +115,9 @@
       "source": [
         "import AIAttackDemo.image_processing as image_processing\n",
         "import AIAttackDemo.neural_net as neural_net\n",
-        "import AIAttackDemo.attack as attack"
+        "import AIAttackDemo.attack as attack\n",
+        "\n",
+        "from google.colab.patches import cv2_show as show_image"
       ],
       "metadata": {
         "id": "I6xTmMb0egyc"
@@ -128,7 +152,7 @@
       "source": [
         "# Check that the image uploaded correctly by displaying it here!\n",
         "filepath = '/file/path/here'\n",
-        "image_processing.show_image_from_file(filepath)"
+        "show_image(image_processing.read_image_from_file(filepath))"
       ],
       "metadata": {
         "id": "jLmjOXwUjuUr"
@@ -151,8 +175,8 @@
       "cell_type": "code",
       "source": [
         "# Here, we crop the image and then display it\n",
-        "crop_image = image_processing.crop_image(filepath)\n",
-        "image_processing.show_image(crop_image)"
+        "crop_image = image_processing.crop_image_from_file(filepath)\n",
+        "show_image(crop_image)"
       ],
       "metadata": {
         "id": "Mbj2sVJakD3g"
@@ -208,7 +232,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "If you'd like to see a picture of that celebrity, look in the sample_images folder in AIAttackDemo. You can either copy and paste the pathname here, or double click on the image to open it in Colab."
+        "If you'd like to see a picture of that celebrity, look in the sample_images folder in AIAttackDemo. You can either copy and paste the pathname into `/file/path/here`, or double click on the image to open it in Colab."
       ],
       "metadata": {
         "id": "a93f-ETonC5C"
@@ -218,7 +242,7 @@
       "cell_type": "code",
       "source": [
         "# Optional: Display the celebrity here\n",
-        "image_processing.show_image_from_file('/file/path/here')"
+        "show_image(image_processing.read_image_from_file('/file/path/here'))"
       ],
       "metadata": {
         "id": "aSGNt24om4Zv"
@@ -310,7 +334,7 @@
     {
       "cell_type": "code",
       "source": [
-        "image_processing.show_image(attack_image)"
+        "show_image(attack_image)"
       ],
       "metadata": {
         "id": "ieauAdWIzEXA"
