--- a/FacialRecognitionDemonstration.ipynb
+++ b/FacialRecognitionDemonstration.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0jPw3HV74gQzwFiin6Kyx",
+      "authorship_tag": "ABX9TyMrU1VaaLCp94ovgzhOQYuf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -117,7 +117,7 @@
         "import AIAttackDemo.neural_net as neural_net\n",
         "import AIAttackDemo.attack as attack\n",
         "\n",
-        "from google.colab.patches import cv2_show as show_image"
+        "from google.colab.patches import cv2_imshow as show_image"
       ],
       "metadata": {
         "id": "I6xTmMb0egyc"
