--- a/FacialRecognitionDemonstration.ipynb
+++ b/FacialRecognitionDemonstration.ipynb
@@ -5,7 +5,12 @@
     "colab": {
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyO35UcWnUjHieCyYYcVpdNM",
+      "collapsed_sections": [
+        "71gkMIdwVu2U",
+        "nuC7LtNSX0oI",
+        "pVbKi0RPX-Bn"
+      ],
+      "authorship_tag": "ABX9TyO2dx7OIWqktxjN82hSZiC4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,6 +60,7 @@
       "source": [
         "%%capture\n",
         "%pip install opencv-python\n",
+        "%pip install progressbar2\n",
         "!wget http://dlib.net/files/shape_predictor_68_face_landmarks.dat.bz2\n",
         "!bunzip2 \"shape_predictor_68_face_landmarks.dat.bz2\""
       ]
@@ -243,15 +249,15 @@
     {
       "cell_type": "code",
       "source": [
-        "target_name = \"Alica Schmidt\" # @param ['Alica Schmidt', 'Angela Merkel', 'Barack Obama','Bruno Mars', 'Dwayne Johnson', 'Ed Sheeran', 'Emma Stone', 'Greta Thunberg', 'Jackie Chan','Malala', 'Manuel Neuer', 'Mark Forster','Michael Jordan', 'Namika', 'Olaf Schulz','Olivia Rodrigo', 'Rihanna', 'Ryan Gosling','Sandra Oh', 'Serena Williams', 'Simu Lui', 'Zendaya'] {run: \"auto\"}\n",
+        "# @title  { run: \"auto\", display-mode: \"form\" }\n",
+        "target_name = \"Sandra Oh\" # @param ['Alica Schmidt', 'Angela Merkel', 'Barack Obama','Bruno Mars', 'Dwayne Johnson', 'Ed Sheeran', 'Emma Stone', 'Greta Thunberg', 'Jackie Chan','Malala', 'Manuel Neuer', 'Mark Forster','Michael Jordan', 'Namika', 'Olaf Schulz','Olivia Rodrigo', 'Rihanna', 'Ryan Gosling','Sandra Oh', 'Serena Williams', 'Simu Lui', 'Zendaya'] {run: \"auto\"}\n",
         "\n",
         "sel_index = neural_net.name2index(target_name)\n",
         "show_image(image_processing.read_image_from_file(neural_net.index2filepath(sel_index)))\n",
         "\n"
       ],
       "metadata": {
-        "id": "bQdGt4GDJNBD",
-        "cellView": "form"
+        "id": "bQdGt4GDJNBD"
       },
       "execution_count": null,
       "outputs": []
@@ -290,7 +296,10 @@
     {
       "cell_type": "code",
       "source": [
-        "show_image(attack_image)"
+        "print('Attack Image:')\n",
+        "show_image(attack_image)\n",
+        "print('Original Image:')\n",
+        "show_image(crop_image)"
       ],
       "metadata": {
         "id": "ieauAdWIzEXA"
@@ -302,7 +311,8 @@
       "cell_type": "code",
       "source": [
         "attack_input = image_processing.preprocess_image(attack_image)\n",
-        "neural_net.predict(attack_input, model)"
+        "prediction = neural_net.predict(attack_input, model)\n",
+        "show_image(image_processing.read_image_from_file(neural_net.index2filepath(prediction)))"
       ],
       "metadata": {
         "id": "SUqvziqSx1tJ"
@@ -313,7 +323,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Further Exploration"
+        "# Further Exploration\n",
+        "Here are some more ideas of things to try if you'd like to keep exploring attacks on neural networks! You can also go back to the beginning of this notebook and try again with a different original picture."
       ],
       "metadata": {
         "id": "Yzz9jrZJzO4I"
@@ -322,15 +333,131 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Within these functions, there are many parameters that can be adapted. Here are a few ideas:\n",
-        "* Use different input images and see how the model behaves\n",
-        "* Upload a different trained keras model and run the same attack.\n",
-        "* Adjust how much the attack changes the picture. Right now, the function runs 400 steps automatically, but `attack.targeted_attack(model, crop_image, target_name, steps=N)` will run N steps instead. This will affect how long the attack takes, how \"strange\" the image looks, and how likely it is that the model will predict the target celebrity\n",
-        "* Use the function `neural_net.print_all_probs(attack_input, model)` to see how similar the model thinks an image is to *all* the celebrity options. If the target has a lower probability, the attack will typically require more steps to be successful!"
+        "## Attack Strength"
       ],
       "metadata": {
-        "id": "erYft-tOzTJu"
+        "id": "71gkMIdwVu2U"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Right now, the attack is set to stop after about 15 minutes (aka after 400 steps). However, this is not guaranteed to reach the target, which might take more time. If your attack did not lead to the celebrity prediction you wanted, try again with more steps!\n",
+        "\n",
+        "Running this code block will run the attack for up to the given number of time steps, then show the images and the final prediction.\n",
+        "\n",
+        "NOTE: the attack will always end early once it succeeds."
+      ],
+      "metadata": {
+        "id": "F2AZOvPgZVG7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @title  { display-mode: \"form\" }\n",
+        "target_name = 'Angela Merkel' # @param ['Alica Schmidt', 'Angela Merkel', 'Barack Obama','Bruno Mars', 'Dwayne Johnson', 'Ed Sheeran', 'Emma Stone', 'Greta Thunberg', 'Jackie Chan','Malala', 'Manuel Neuer', 'Mark Forster','Michael Jordan', 'Namika', 'Olaf Schulz','Olivia Rodrigo', 'Rihanna', 'Ryan Gosling','Sandra Oh', 'Serena Williams', 'Simu Lui', 'Zendaya']\n",
+        "attack_strength = 'medium: 400 steps, ~15 minutes' # @param ['weak: 200 steps, ~6 minutes', 'medium: 400 steps, ~15 minutes', 'strong: 800 steps, ~30 minutes']\n",
+        "if attack_strenth == 'weak: 200 steps, ~6 minutes': steps = 200\n",
+        "elif attack_strength == 'medium: 400 steps, ~15 minutes': steps = 400\n",
+        "else: steps = 800\n",
+        "\n",
+        "# Run the attack\n",
+        "attack_image = attack.targeted_attack(model, crop_image, target_name, steps=steps)\n",
+        "\n",
+        "# Show the original and attacked images\n",
+        "print('Attack Image:')\n",
+        "show_image(attack_image)\n",
+        "print('Original Image:')\n",
+        "show_image(crop_image)\n",
+        "\n",
+        "# Predict\n",
+        "attack_input = image_processing.preprocess_image(attack_image)\n",
+        "prediction = neural_net.predict(attack_input, model)\n",
+        "show_image(image_processing.read_image_from_file(neural_net.index2filepath(prediction)))"
+      ],
+      "metadata": {
+        "id": "koO04NtJxmtE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## More Detailed Predictions (with Probabilities)"
+      ],
+      "metadata": {
+        "id": "nuC7LtNSX0oI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If you want, you can see the probability the model assigns for all of the celebrity options before and after the attack."
+      ],
+      "metadata": {
+        "id": "Tpe-EM3q0St9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Probabilities before the attack:')\n",
+        "neural_net.print_all_probs(model_input, model)\n",
+        "print('Probabilities after the most recent attack:')\n",
+        "neural_net.print_all_probs(attack_input, model)"
+      ],
+      "metadata": {
+        "id": "kIvi8N_K0b0y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Untargeted Attack"
+      ],
+      "metadata": {
+        "id": "pVbKi0RPX-Bn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What if you don't care what celebrity the model assigns, as long as it's different from the original output?\n",
+        "\n",
+        "Use an untargeted attack!\n",
+        "\n",
+        "This will be much faster (~1 minute), and the image will look much more similar to the original."
+      ],
+      "metadata": {
+        "id": "eQo8Xb0MYKM6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Run the attack\n",
+        "attack_image = attack.untargeted_attack(model, crop_image, steps=200)\n",
+        "\n",
+        "# Show the original and attacked images\n",
+        "print('Attack Image:')\n",
+        "show_image(attack_image)\n",
+        "print('Original Image:')\n",
+        "show_image(crop_image)\n",
+        "\n",
+        "# Predict\n",
+        "attack_input = image_processing.preprocess_image(attack_image)\n",
+        "prediction = neural_net.predict(attack_input, model)\n",
+        "show_image(image_processing.read_image_from_file(neural_net.index2filepath(prediction)))"
+      ],
+      "metadata": {
+        "id": "MA2ZSx4EYboG"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
