--- a/FacialRecognitionDemonstration.ipynb
+++ b/FacialRecognitionDemonstration.ipynb
@@ -10,7 +10,7 @@
         "nuC7LtNSX0oI",
         "pVbKi0RPX-Bn"
       ],
-      "authorship_tag": "ABX9TyO2dx7OIWqktxjN82hSZiC4",
+      "authorship_tag": "ABX9TyOEwS09Fo/KUCEVkpWHf5fj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,13 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/NoraGraves/AIAttackDemo/blob/main/FacialRecognitionDemonstration.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "B-ZF19kQfCQ4"
+      }
     },
     {
       "cell_type": "markdown",
@@ -127,6 +134,7 @@
         "from google.colab import files\n",
         "uploaded=files.upload()\n",
         "\n",
+        "# saves filepath for uploaded image\n",
         "filepath = ''\n",
         "for key in uploaded.keys():\n",
         "    filepath = f'/content/{key}'"
@@ -186,7 +194,7 @@
       "cell_type": "code",
       "source": [
         "# Upload the model\n",
-        "model = neural_net.load_model_from_file('/content/AIAttackDemo/celeb_faces.model.keras')\n"
+        "model = neural_net.load_model_from_file('/content/AIAttackDemo/celeb_faces.model.keras')"
       ],
       "metadata": {
         "id": "BHzHZS_elC3G"
@@ -342,7 +350,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Right now, the attack is set to stop after about 15 minutes (aka after 400 steps). However, this is not guaranteed to reach the target, which might take more time. If your attack did not lead to the celebrity prediction you wanted, try again with more steps!\n",
+        "Right now, the attack is set to run for up to 400 steps (which takes about 15 minutes). However, this is not guaranteed to reach the target, which might take more time. If your attack did not lead to the celebrity prediction you wanted, try again with more steps!\n",
         "\n",
         "Running this code block will run the attack for up to the given number of time steps, then show the images and the final prediction.\n",
         "\n",
@@ -357,8 +365,8 @@
       "source": [
         "# @title  { display-mode: \"form\" }\n",
         "target_name = 'Angela Merkel' # @param ['Alica Schmidt', 'Angela Merkel', 'Barack Obama','Bruno Mars', 'Dwayne Johnson', 'Ed Sheeran', 'Emma Stone', 'Greta Thunberg', 'Jackie Chan','Malala', 'Manuel Neuer', 'Mark Forster','Michael Jordan', 'Namika', 'Olaf Schulz','Olivia Rodrigo', 'Rihanna', 'Ryan Gosling','Sandra Oh', 'Serena Williams', 'Simu Lui', 'Zendaya']\n",
-        "attack_strength = 'medium: 400 steps, ~15 minutes' # @param ['weak: 200 steps, ~6 minutes', 'medium: 400 steps, ~15 minutes', 'strong: 800 steps, ~30 minutes']\n",
-        "if attack_strenth == 'weak: 200 steps, ~6 minutes': steps = 200\n",
+        "attack_strength = 'weak: 200 steps, ~6 minutes' # @param ['weak: 200 steps, ~6 minutes', 'medium: 400 steps, ~15 minutes', 'strong: 800 steps, ~30 minutes']\n",
+        "if attack_strength == 'weak: 200 steps, ~6 minutes': steps = 200\n",
         "elif attack_strength == 'medium: 400 steps, ~15 minutes': steps = 400\n",
         "else: steps = 800\n",
         "\n",
@@ -404,12 +412,22 @@
       "cell_type": "code",
       "source": [
         "print('Probabilities before the attack:')\n",
-        "neural_net.print_all_probs(model_input, model)\n",
+        "neural_net.print_all_probs(model_input, model)"
+      ],
+      "metadata": {
+        "id": "kIvi8N_K0b0y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "print('Probabilities after the most recent attack:')\n",
         "neural_net.print_all_probs(attack_input, model)"
       ],
       "metadata": {
-        "id": "kIvi8N_K0b0y"
+        "id": "vuDzV2A22CsL"
       },
       "execution_count": null,
       "outputs": []
