use specific keras and tensorflow versions

--- a/FacialRecognitionDemonstration.ipynb
+++ b/FacialRecognitionDemonstration.ipynb
@@ -10,7 +10,7 @@
         "nuC7LtNSX0oI",
         "pVbKi0RPX-Bn"
       ],
-      "authorship_tag": "ABX9TyOEwS09Fo/KUCEVkpWHf5fj",
+      "authorship_tag": "ABX9TyP1ckBMxSZeCb0rrOZqiDtI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,6 +56,18 @@
       "metadata": {
         "id": "bMGcRDI2Vp5-"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%capture\n",
+        "!pip install tf-keras==2.15.0 && pip install tensorflow==2.15.1 && pip install keras==2.15.0"
+      ],
+      "metadata": {
+        "id": "OQnCrhWe0nFc"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
